src/com/broadsoft/sipp/parser/SippMonitorParser.java
package com.broadsoft.sipp.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SippMonitorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DIRECTION=1, BYTES=2, DIRECTION_LINE=3, YEAR=4, MONTH=5, DAY=6, HOUR=7, 
		MINUTE=8, SECOND=9, MILLIS=10, NANOS=11, DATE=12, TIME=13, TIME_STAMP=14, 
		RESPONSE_LINE=15, DIGIT=16, RESPONSE_CODE=17, METHOD=18, REQUEST_LINE=19, 
		NEWLINE=20, SIP_VERSION=21, NOT_SPACE=22, SIP_URL=23, SIP_HEADER=24, HEADER=25, 
		SDP_LINE=26, WS=27;
	public static final int
		RULE_sippLog = 0, RULE_sippItem = 1, RULE_directionLine = 2, RULE_timeStamp = 3, 
		RULE_sipMessage = 4, RULE_sipResponse = 5, RULE_responseLine = 6, RULE_sipRequest = 7, 
		RULE_requestLine = 8, RULE_sipHeader = 9, RULE_sdp = 10, RULE_sdpLine = 11;
	public static final String[] ruleNames = {
		"sippLog", "sippItem", "directionLine", "timeStamp", "sipMessage", "sipResponse", 
		"responseLine", "sipRequest", "requestLine", "sipHeader", "sdp", "sdpLine"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "'SIP/2.0'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DIRECTION", "BYTES", "DIRECTION_LINE", "YEAR", "MONTH", "DAY", 
		"HOUR", "MINUTE", "SECOND", "MILLIS", "NANOS", "DATE", "TIME", "TIME_STAMP", 
		"RESPONSE_LINE", "DIGIT", "RESPONSE_CODE", "METHOD", "REQUEST_LINE", "NEWLINE", 
		"SIP_VERSION", "NOT_SPACE", "SIP_URL", "SIP_HEADER", "HEADER", "SDP_LINE", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SippMonitor.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SippMonitorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SippMonitorContext extends ParserRuleContext {
		public List<SippItemContext> sippItem() {
			return getRuleContexts(SippItemContext.class);
		}
		public SippItemContext sippItem(int i) {
			return getRuleContext(SippItemContext.class,i);
		}
		public SippMonitorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sippLog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterSippMonitor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitSippMonitor(this);
		}
	}

	public final SippMonitorContext sippLog() throws RecognitionException {
		SippMonitorContext _localctx = new SippMonitorContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sippLog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(24); 
				sippItem();
				}
				}
				setState(27); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIRECTION_LINE) | (1L << TIME_STAMP) | (1L << RESPONSE_LINE) | (1L << REQUEST_LINE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SippItemContext extends ParserRuleContext {
		public TimeStampContext timeStamp() {
			return getRuleContext(TimeStampContext.class,0);
		}
		public DirectionLineContext directionLine() {
			return getRuleContext(DirectionLineContext.class,0);
		}
		public SipMessageContext sipMessage() {
			return getRuleContext(SipMessageContext.class,0);
		}
		public SippItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sippItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterSippItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitSippItem(this);
		}
	}

	public final SippItemContext sippItem() throws RecognitionException {
		SippItemContext _localctx = new SippItemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sippItem);
		try {
			setState(32);
			switch (_input.LA(1)) {
			case TIME_STAMP:
				enterOuterAlt(_localctx, 1);
				{
				setState(29); 
				timeStamp();
				}
				break;
			case DIRECTION_LINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(30); 
				directionLine();
				}
				break;
			case RESPONSE_LINE:
			case REQUEST_LINE:
				enterOuterAlt(_localctx, 3);
				{
				setState(31); 
				sipMessage();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectionLineContext extends ParserRuleContext {
		public TerminalNode DIRECTION_LINE() { return getToken(SippMonitorParser.DIRECTION_LINE, 0); }
		public DirectionLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directionLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterDirectionLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitDirectionLine(this);
		}
	}

	public final DirectionLineContext directionLine() throws RecognitionException {
		DirectionLineContext _localctx = new DirectionLineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_directionLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); 
			match(DIRECTION_LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeStampContext extends ParserRuleContext {
		public TerminalNode TIME_STAMP() { return getToken(SippMonitorParser.TIME_STAMP, 0); }
		public TimeStampContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timeStamp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterTimeStamp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitTimeStamp(this);
		}
	}

	public final TimeStampContext timeStamp() throws RecognitionException {
		TimeStampContext _localctx = new TimeStampContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_timeStamp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); 
			match(TIME_STAMP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SipMessageContext extends ParserRuleContext {
		public SipResponseContext sipResponse() {
			return getRuleContext(SipResponseContext.class,0);
		}
		public SipRequestContext sipRequest() {
			return getRuleContext(SipRequestContext.class,0);
		}
		public SipMessageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sipMessage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterSipMessage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitSipMessage(this);
		}
	}

	public final SipMessageContext sipMessage() throws RecognitionException {
		SipMessageContext _localctx = new SipMessageContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sipMessage);
		try {
			setState(40);
			switch (_input.LA(1)) {
			case RESPONSE_LINE:
				enterOuterAlt(_localctx, 1);
				{
				setState(38); 
				sipResponse();
				}
				break;
			case REQUEST_LINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(39); 
				sipRequest();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SipResponseContext extends ParserRuleContext {
		public ResponseLineContext responseLine() {
			return getRuleContext(ResponseLineContext.class,0);
		}
		public List<SipHeaderContext> sipHeader() {
			return getRuleContexts(SipHeaderContext.class);
		}
		public SipHeaderContext sipHeader(int i) {
			return getRuleContext(SipHeaderContext.class,i);
		}
		public SdpContext sdp() {
			return getRuleContext(SdpContext.class,0);
		}
		public SipResponseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sipResponse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterSipResponse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitSipResponse(this);
		}
	}

	public final SipResponseContext sipResponse() throws RecognitionException {
		SipResponseContext _localctx = new SipResponseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sipResponse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); 
			responseLine();
			setState(44); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(43); 
				sipHeader();
				}
				}
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SIP_HEADER );
			setState(49);
			_la = _input.LA(1);
			if (_la==SDP_LINE) {
				{
				setState(48); 
				sdp();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResponseLineContext extends ParserRuleContext {
		public TerminalNode RESPONSE_LINE() { return getToken(SippMonitorParser.RESPONSE_LINE, 0); }
		public ResponseLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_responseLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterResponseLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitResponseLine(this);
		}
	}

	public final ResponseLineContext responseLine() throws RecognitionException {
		ResponseLineContext _localctx = new ResponseLineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_responseLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			match(RESPONSE_LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SipRequestContext extends ParserRuleContext {
		public RequestLineContext requestLine() {
			return getRuleContext(RequestLineContext.class,0);
		}
		public List<SipHeaderContext> sipHeader() {
			return getRuleContexts(SipHeaderContext.class);
		}
		public SipHeaderContext sipHeader(int i) {
			return getRuleContext(SipHeaderContext.class,i);
		}
		public SdpContext sdp() {
			return getRuleContext(SdpContext.class,0);
		}
		public SipRequestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sipRequest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterSipRequest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitSipRequest(this);
		}
	}

	public final SipRequestContext sipRequest() throws RecognitionException {
		SipRequestContext _localctx = new SipRequestContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sipRequest);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); 
			requestLine();
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54); 
				sipHeader();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SIP_HEADER );
			setState(60);
			_la = _input.LA(1);
			if (_la==SDP_LINE) {
				{
				setState(59); 
				sdp();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestLineContext extends ParserRuleContext {
		public TerminalNode REQUEST_LINE() { return getToken(SippMonitorParser.REQUEST_LINE, 0); }
		public RequestLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterRequestLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitRequestLine(this);
		}
	}

	public final RequestLineContext requestLine() throws RecognitionException {
		RequestLineContext _localctx = new RequestLineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_requestLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); 
			match(REQUEST_LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SipHeaderContext extends ParserRuleContext {
		public TerminalNode SIP_HEADER() { return getToken(SippMonitorParser.SIP_HEADER, 0); }
		public SipHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sipHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterSipHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitSipHeader(this);
		}
	}

	public final SipHeaderContext sipHeader() throws RecognitionException {
		SipHeaderContext _localctx = new SipHeaderContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sipHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); 
			match(SIP_HEADER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SdpContext extends ParserRuleContext {
		public List<SdpLineContext> sdpLine() {
			return getRuleContexts(SdpLineContext.class);
		}
		public SdpLineContext sdpLine(int i) {
			return getRuleContext(SdpLineContext.class,i);
		}
		public SdpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sdp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterSdp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitSdp(this);
		}
	}

	public final SdpContext sdp() throws RecognitionException {
		SdpContext _localctx = new SdpContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sdp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66); 
				sdpLine();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SDP_LINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SdpLineContext extends ParserRuleContext {
		public TerminalNode SDP_LINE() { return getToken(SippMonitorParser.SDP_LINE, 0); }
		public SdpLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sdpLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).enterSdpLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SippMonitorListener ) ((SippMonitorListener)listener).exitSdpLine(this);
		}
	}

	public final SdpLineContext sdpLine() throws RecognitionException {
		SdpLineContext _localctx = new SdpLineContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sdpLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			match(SDP_LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}
